spacing issue

--- a/css/produkter.css
+++ b/css/produkter.css
@@ -31,7 +31,6 @@
   
    h2, h3, h4, h5, h6{
     font-family: "Montserrat", sans-serif;
-
    }
 
    p {
@@ -108,6 +107,7 @@
   font-size: 17px;
 }
 
+
 .mobil-menu a:hover {
   background-color: var(--lblue);
   color: var(--contrast);
@@ -120,7 +120,7 @@
 
 .mobil-menu .icon {
   display: none;
-  position:relative
+  position:relative;
 }
 
 .mobil-menu a {display: none;}
@@ -169,8 +169,19 @@
   flex-direction: column;
   flex-wrap: wrap;
   text-align: center;
+  align-items: center;
+  width: 100vw;
+  margin: 1rem;
+ }
+
+ .produkt-img {
   width: 100%;
-  margin: 0.5rem;
+  height: auto;
+ }
+
+ .produkt{
+  width: 55ch;
+  height: auto;
  }
 
 .button {
@@ -190,6 +201,38 @@
   background-color: var(--dblue);
   color: var(--backgr);
   }
+/* Produkt katalog styling slut */
+
+/* Footer styling start */
+  .footer-container{
+    display: flex;
+    flex-direction: column;
+    font-family: "Montserrat", sans-serif;
+    justify-content: center;background-color: var(--dblue);
+  }
+
+  h3 {
+    font-family: "Pacifico", cursive;
+    font-weight: 500;
+    font-size: 2rem;
+    align-self: center;  
+    margin: 0;
+    margin-top: 0.5rem;
+  }
+
+ .footer-links {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.5rem;
+  transition-duration: 0.4s;
+  cursor: pointer;
+ }
+
+ .footer-links, a:hover {
+  text-decoration: underline;
+  color: var(--backgr);
+ }
+
  /* Footer styling slut */
 
 } 
@@ -199,6 +242,7 @@
   .row {
     display: flex; /* gør elementerne flexible ift. kassen*/
     flex-direction: row; /* sætter elementerne på række */
+    justify-content: space-evenly;
     align-items: flex-start;
   
     width: 100%;
@@ -218,7 +262,7 @@
 #menu-links {
   display: flex;
   margin-top: 0.5rem;
-  margin-left: 0;
+  
 }
 
 .entire-mobil-menu {
